# onearth

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .project  .snyk  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  GNUmakefile  NOTICE  PrefixMacro.props  README.md  TEST.md  apr_FOPEN_RANDOM.patch  build.sh  build_and_run.sh  full_demo.sh  gdal.bash  harness.lua  libicd.vcxproj  mod_ahtse_lua.sln  mod_ahtse_lua.vcxproj  mod_ahtse_png.vcxproj.filters  mod_brunsli.sln  mod_brunsli.vcxproj  mod_mrf.vcxproj  mod_reproject.vcxproj  mod_reproject.vcxproj.filters  mod_sfim.vcxproj  mod_sfim.vcxproj.filters  mod_twms.vcxproj  requirements.txt  run.sh  sample_script.lua  version.sh
.github/workflows/: main.yml
ci/: 10-worker.conf  Makefile.lcl  README.md  build_deps_image.sh  build_el7_base_image_from_src.sh  build_el7_docker_image.sh  build_el7_image_from_src.sh  build_test_image.sh  httpd.conf  mod_proxy_http.patch  onearth.spec  onearth.spec_demo  run_test_in_docker.sh  start_ci2.sh
ci/date_service/: Dockerfile  date_service.lua  oe2-date-service.yaml  start_date_service.sh
ci/layer_configs/: test_mod_mrf_daily_png.config  test_mod_mrf_date_layer.config  test_mod_mrf_legacy_subdaily_jpg.config  test_mod_mrf_nonyear_jpg.config  test_mod_mrf_snap_1a.config  test_mod_mrf_snap_2a.config  test_mod_mrf_snap_3a.config  test_mod_mrf_snap_3b.config  test_mod_mrf_snap_3c.config  test_mod_mrf_snap_3d.config  test_mod_mrf_snap_4a.config  test_mod_mrf_snap_4b.config  test_mod_mrf_snap_4c.config  test_mod_mrf_snap_5a.config  test_mod_mrf_snap_year_boundary.config  test_mod_mrf_static_jpg.config  test_mod_mrf_weekly_jpg.config
doc/: archive.md  config_apache.md  config_endpoint.md  config_layer.md  config_remote_layers.md  config_reproject.md  config_support.md  config_vectors.md  configuration.md  deployment.md  docker_image_build.md  installation.md  layer_config.md  local_deployment.md  redis_commands.md  request_flow.md  rpm_build.md  storage.md  time_detection.md  troubleshooting.md  vector_handling.md
docker/: .env  00-mpm.conf  00-performance.conf  10-worker.conf  Dockerfile  Makefile.lcl  README.md  build_demo.sh  build_oe2.sh  cors.conf  date_service.lua  deploy_oe2_containers.sh  docker-compose.yml  entrypoint.sh  genhashFileName.py  http_rpm_spec.patch  load_sample_layers.sh  logrotate  logrotate.daily.httpd  logrotate.daily.onearth  logrotate.hourly.httpd  mod_proxy_http.patch  oe2_gibs_status.conf  oe2_ssl.conf  oe2_test_AST_L1T.conf  oe2_test_MODIS.conf  oe2_test_date_service.conf  oe2_test_mod_mrf_date.conf  oe2_test_mod_mrf_date_year_dir.conf  oe2_test_mod_mrf_static.conf  oe2_test_mod_reproject_date.conf  oe2_test_mod_reproject_static.conf  proxypass_nomain_flag.patch  set_env_vars_docker_compose.sh  start_oe2.sh  test_layer_setup.sh
httpd/: proxypass_nomain_flag.patch
profiler/: 10k_break.py  10k_break_dates.py  README.md  analyze-event-log.py  analyze_event_log.py  cat_event_logs.py  generate-profile-data  get-logs.sh  oe_profiler.py  start_profiler.sh  test-time-jpeg
src/: BitMask2D.h  JPEG12.cpp  Makefile  Makefile.lcl.example  PNG_codec.cpp  Packer_RLE.cpp  icd_codecs.cpp  icd_codecs.h  mod_ahtse_lua.cpp  mod_ahtse_png.cpp  mod_mrf.h  mod_receive.h  mod_reproject.cpp  mod_reproject.h  mod_sfim.h  mod_twms.cpp  mod_twms.h
src/modules/time_service/: README.md  onearth_time_service-0.1-1.rockspec  onearth_time_service-0.1-2.rockspec  pyproject.toml  time_service.lua  time_service.py
src/modules/time_service/redis-lua/rockspec/: redis-lua-2.0.5-0.rockspec
src/modules/time_service/utils/: README.md  best.lua  oe_best_redis.py  oe_periods_configure.py  oe_periods_key_converter.py  oe_redis_utl.py  oe_scrape_time.py  periods.lua  periods.py  scrape.py
(+1836 files in other folders)
